--- a/React+Vite/my-react-app/src/style/Cart.css
+++ b/React+Vite/my-react-app/src/style/Cart.css
@@ -375,9 +375,9 @@
 }
 
 .cart-loading .spinner {
-    width: 50px;
-    height: 50px;
-    border: 4px solid #eee;
+    width: 60px;
+    height: 60px;
+    border: 4.5px solid #eee;
     border-top-color: #1a1a2e;
     border-radius: 50%;
     animation: spin 1s linear infinite;
@@ -391,6 +391,7 @@
 
 .cart-loading p {
     margin-top: 20px;
+    font-size: 18px;
     color: #666;
 }
 
